--- a/Task 17/assets/index.html
+++ b/Task 17/assets/index.html
@@ -36,15 +36,15 @@
             </div>
 
             <div class="time__line">
-              <ul>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
+              <ul class="years__list">
+                <li class="selected">2017</li>
+                <li class="unselected">2016</li>
+                <li class="unselected">2015</li>
+                <li class="unselected">2014</li>
+                <li class="unselected">2013</li>
+                <li class="unselected">2012</li>
+                <li class="unselected">2011</li>
+                <li class="unselected">2010</li>
               </ul>
             </div>
           </div>
