начал блок основной инфы

--- a/Task 17/assets/index.html
+++ b/Task 17/assets/index.html
@@ -47,6 +47,32 @@
                 <li class="unselected">2010</li>
               </ul>
             </div>
+
+            <div class="main__info">
+              <ul class="theme__list">
+                <li class="theme__item">
+                  <img
+                    class="theme__item__image"
+                    src="img/avatar1.jpg"
+                    alt="#"
+                  />
+                  <p class="theme__item__text">
+                    Top 5 fast growing startups this years
+                  </p>
+                  <div class="theme__item__date__block">
+                    <h3 class="theme__item__date__block__date">20</h3>
+                    <div class="years__month__block">
+                      <p>jan</p>
+                      <p>2017</p>
+                    </div>
+                  </div>
+                </li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+              </ul>
+            </div>
           </div>
         </div>
       </div>
