--- a/Task 17/assets/index.html
+++ b/Task 17/assets/index.html
@@ -51,26 +51,112 @@
             <div class="main__info">
               <ul class="theme__list">
                 <li class="theme__item">
-                  <img
-                    class="theme__item__image"
-                    src="img/avatar1.jpg"
-                    alt="#"
-                  />
-                  <p class="theme__item__text">
-                    Top 5 fast growing startups this years
-                  </p>
+                  <div class="theme__item__main__info">
+                    <img
+                      class="theme__item__image"
+                      src="img/avatar1.jpg"
+                      alt="#"
+                    />
+                    <p class="theme__item__text">
+                      Top 5 fast growing startups this years
+                    </p>
+                  </div>
                   <div class="theme__item__date__block">
                     <h3 class="theme__item__date__block__date">20</h3>
                     <div class="years__month__block">
-                      <p>jan</p>
-                      <p>2017</p>
+                      <p class="theme__item__date__block__month">jan</p>
+                      <p class="theme__item__date__block__year">2017</p>
                     </div>
                   </div>
                 </li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
+                <!-- </ul> -->
+
+                <!-- <ul class="theme__list"> -->
+                <li class="theme__item">
+                  <div class="theme__item__main__info">
+                    <img
+                      class="theme__item__image__two"
+                      src="img/avatar2.jpg"
+                      alt="#"
+                    />
+                    <p class="theme__item__text">
+                      Project Arc raises $90 billion from Stark industries
+                    </p>
+                  </div>
+                  <div class="theme__item__date__block">
+                    <h3 class="theme__item__date__block__date">10</h3>
+                    <div class="years__month__block">
+                      <p class="theme__item__date__block__month">jan</p>
+                      <p class="theme__item__date__block__year">2017</p>
+                    </div>
+                  </div>
+                </li>
+                <!-- </ul> -->
+
+                <!-- <ul class="theme__list"> -->
+                <li class="theme__item">
+                  <div class="theme__item__main__info">
+                    <img
+                      class="theme__item__image"
+                      src="img/avatar1.jpg"
+                      alt="#"
+                    />
+                    <p class="theme__item__text">
+                      Arc joins the big league. now taking out its opponents
+                    </p>
+                  </div>
+                  <div class="theme__item__date__block">
+                    <h3 class="theme__item__date__block__date">06</h3>
+                    <div class="years__month__block">
+                      <p class="theme__item__date__block__month">jan</p>
+                      <p class="theme__item__date__block__year">2017</p>
+                    </div>
+                  </div>
+                </li>
+                <!-- </ul> -->
+
+                <!-- <ul class="theme__list"> -->
+                <li class="theme__item">
+                  <div class="theme__item__main__info">
+                    <img
+                      class="theme__item__image__two"
+                      src="img/avatar3.jpg"
+                      alt="#"
+                    />
+                    <p class="theme__item__text">
+                      Arc reveals the first AI prototype
+                    </p>
+                  </div>
+                  <div class="theme__item__date__block">
+                    <h3 class="theme__item__date__block__date">04</h3>
+                    <div class="years__month__block">
+                      <p class="theme__item__date__block__month">jan</p>
+                      <p class="theme__item__date__block__year">2017</p>
+                    </div>
+                  </div>
+                </li>
+                <!-- </ul> -->
+
+                <!-- <ul class="theme__list"> -->
+                <li class="theme__item">
+                  <div class="theme__item__main__info">
+                    <img
+                      class="theme__item__image__two"
+                      src="img/avatar2.jpg"
+                      alt="#"
+                    />
+                    <p class="theme__item__text">
+                      Its time for a new era. Arc leads this time
+                    </p>
+                  </div>
+                  <div class="theme__item__date__block">
+                    <h3 class="theme__item__date__block__date">02</h3>
+                    <div class="years__month__block">
+                      <p class="theme__item__date__block__month">jan</p>
+                      <p class="theme__item__date__block__year">2017</p>
+                    </div>
+                  </div>
+                </li>
               </ul>
             </div>
           </div>
