Закончил верхний блок, добавил карту

--- a/Task 18/assets/index.html
+++ b/Task 18/assets/index.html
@@ -14,6 +14,7 @@
   <body>
     <div class="container">
       <div class="content">
+        <span class="notch"></span>
         <div class="card">
           <span class="overlay"></span>
           <h2 class="header">card</h2>
