НАчал основной блок

--- a/Task 18/assets/index.html
+++ b/Task 18/assets/index.html
@@ -10,6 +10,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./styles.css" />
+    <link rel="stylesheet" href="slider.css" />
   </head>
   <body>
     <div class="container">
@@ -22,6 +23,25 @@
           <div class="payment">
             <img class="payment__item" src="img/card.png" alt="#" />
           </div>
+        </div>
+
+        <div class="variants">
+          <div class="safe__card">
+            <img class="variants__image" src="img/lock.svg" alt="#" />
+            <div class="safe__card__text">
+              <h3 class="safe__card__text__header">Lock card</h3>
+              <p class="safe__card__text__paragraph">
+                You can unlock card it later
+              </p>
+            </div>
+            <div class="switch">
+              <input type="checkbox" />
+              <span class="slider"></span>
+            </div>
+          </div>
+          <!-- <div class="abroad__payment"></div>
+          <div class="online__payment"></div>
+          <div class="withdrawals"></div> -->
         </div>
       </div>
     </div>
