Осталось настроить слайдеры правильно

--- a/Task 18/assets/index.html
+++ b/Task 18/assets/index.html
@@ -25,24 +25,68 @@
           </div>
         </div>
 
-        <div class="variants">
-          <div class="safe__card">
-            <img class="variants__image" src="img/lock.svg" alt="#" />
-            <div class="safe__card__text">
-              <h3 class="safe__card__text__header">Lock card</h3>
-              <p class="safe__card__text__paragraph">
-                You can unlock card it later
-              </p>
+        <ul class="variants">
+          <li class="function">
+            <div class="block">
+              <img class="variants__image" src="img/lock.svg" alt="#" />
+              <div class="safe__card__text">
+                <h3 class="safe__card__text__header">Lock card</h3>
+                <p class="safe__card__text__paragraph">
+                  You can unlock card it later
+                </p>
+              </div>
             </div>
             <div class="switch">
               <input type="checkbox" />
               <span class="slider"></span>
             </div>
-          </div>
-          <!-- <div class="abroad__payment"></div>
-          <div class="online__payment"></div>
-          <div class="withdrawals"></div> -->
-        </div>
+          </li>
+          <li class="function">
+            <div class="block">
+              <img class="variants__image" src="img/plane.svg" alt="#" />
+              <div class="safe__card__text">
+                <h3 class="safe__card__text__header">Payments abroad</h3>
+                <p class="safe__card__text__paragraph">
+                  Enable your card abroud
+                </p>
+              </div>
+            </div>
+            <div class="switch">
+              <input type="checkbox" />
+              <span class="slider"></span>
+            </div>
+          </li>
+          <li class="function">
+            <div class="block">
+              <img class="variants__image" src="img/laptop.svg" alt="#" />
+              <div class="safe__card__text">
+                <h3 class="safe__card__text__header">Inline payments</h3>
+                <p class="safe__card__text__paragraph">
+                  Enable online transactions
+                </p>
+              </div>
+            </div>
+            <div class="switch">
+              <input type="checkbox" />
+              <span class="slider"></span>
+            </div>
+          </li>
+          <li class="function">
+            <div class="block">
+              <img class="variants__image" src="img/atm.svg" alt="#" />
+              <div class="safe__card__text">
+                <h3 class="safe__card__text__header">ATM withdrawals</h3>
+                <p class="safe__card__text__paragraph">
+                  Enable ATM withdrawals
+                </p>
+              </div>
+            </div>
+            <div class="switch">
+              <input type="checkbox" />
+              <span class="slider"></span>
+            </div>
+          </li>
+        </ul>
       </div>
     </div>
   </body>
