--- a/Task 18/assets/index.html
+++ b/Task 18/assets/index.html
@@ -37,8 +37,9 @@
               </div>
             </div>
             <div class="switch">
-              <input type="checkbox" />
-              <span class="slider"></span>
+              <label class="slider" for="checked">
+                <input name="checked" type="checkbox"
+              /></label>
             </div>
           </li>
           <li class="function">
@@ -52,8 +53,9 @@
               </div>
             </div>
             <div class="switch">
-              <input type="checkbox" />
-              <span class="slider"></span>
+              <label class="slider" for="checked">
+                <input name="checked" type="checkbox"
+              /></label>
             </div>
           </li>
           <li class="function">
@@ -67,8 +69,9 @@
               </div>
             </div>
             <div class="switch">
-              <input type="checkbox" />
-              <span class="slider"></span>
+              <label class="slider" for="checked">
+                <input name="checked" type="checkbox"
+              /></label>
             </div>
           </li>
           <li class="function">
@@ -82,8 +85,9 @@
               </div>
             </div>
             <div class="switch">
-              <input type="checkbox" />
-              <span class="slider"></span>
+              <label class="slider" for="checked">
+                <input name="checked" type="checkbox"
+              /></label>
             </div>
           </li>
         </ul>
