--- a/Task 19/assets/index.html
+++ b/Task 19/assets/index.html
@@ -13,7 +13,17 @@
   </head>
   <body>
     <div class="container">
-      <div class="main__block"></div>
+      <div class="main__block">
+        <div class="nav">
+          <button class="nav__button">
+            <img src="img/menu.svg" alt="#" />
+          </button>
+          <p class="nav__text">google</p>
+          <button class="nav__button">
+            <img src="img/search.svg" alt="#" />
+          </button>
+        </div>
+      </div>
     </div>
   </body>
 </html>
