Начал блок с картой

--- a/Task 19/assets/index.html
+++ b/Task 19/assets/index.html
@@ -23,6 +23,16 @@
             <img src="img/search.svg" alt="#" />
           </button>
         </div>
+
+        <div class="map__block">
+          <div class="overlay"></div>
+          <div class="content__block">
+            <p class="start__location">Hamburg</p>
+            <!-- <img class="content__block__image" src="img/car.svg" alt="#" /> -->
+            <div class="start__location">Cologne</div>
+          </div>
+          <button class="map__button">open map</button>
+        </div>
       </div>
     </div>
   </body>
