Начал блок с направленями

--- a/Task 19/assets/index.html
+++ b/Task 19/assets/index.html
@@ -31,7 +31,24 @@
             <!-- <img class="content__block__image" src="img/car.svg" alt="#" /> -->
             <div class="start__location">Cologne</div>
           </div>
-          <button class="map__button">open map</button>
+          <button class="map__button">
+            <img class="map__button__image" src="img/location.svg" alt="" />
+            open map
+          </button>
+        </div>
+
+        <p>Hamburg</p>
+
+        <div class="direction__block">
+          <div class="direction__item">
+            <img src="img/direction.svg" alt="#" />
+            <div class="info__block">
+              <p class="info__block__text">9 min (4.6 km)</p>
+              <h4 class="info__block__header">
+                Head northeast on Plan forward Bergstrasee
+              </h4>
+            </div>
+          </div>
         </div>
       </div>
     </div>
