Внес освновную инфу, осталось подкорректировать некоторые блоки

--- a/Task 19/assets/index.html
+++ b/Task 19/assets/index.html
@@ -49,6 +49,34 @@
               </h4>
             </div>
           </div>
+          <div class="direction__item">
+            <img src="img/direction.svg" alt="#" />
+            <div class="info__block">
+              <p class="info__block__text">82 km</p>
+              <h4 class="info__block__header">Turn right onto Bergstasse</h4>
+            </div>
+          </div>
+          <div class="direction__item">
+            <img src="img/direction.svg" alt="#" />
+            <div class="info__block">
+              <p class="info__block__text">210 m</p>
+              <h4 class="info__block__header">Continue onto Schmiedestrasse</h4>
+            </div>
+          </div>
+          <div class="streetview__block">
+            <img
+              class="streetview__block__image"
+              src="img/marker.svg"
+              alt="#"
+            />
+          </div>
+          <div class="direction__item">
+            <img src="img/direction.svg" alt="#" />
+            <div class="info__block">
+              <p class="info__block__text">64 m</p>
+              <h4 class="info__block__header">Continue onto Alto Fischmarkt</h4>
+            </div>
+          </div>
         </div>
       </div>
     </div>
