--- a/Task 19/assets/index.html
+++ b/Task 19/assets/index.html
@@ -37,7 +37,7 @@
           </button>
         </div>
 
-        <p>Hamburg</p>
+        <p class="main__location">Hamburg</p>
 
         <div class="direction__block">
           <div class="direction__item">
