Начал работу над хеддером

--- a/Task 20/assets/index.html
+++ b/Task 20/assets/index.html
@@ -31,6 +31,30 @@
 
     And good luck!
   -->
-    <div class="container"></div>
+    <div class="container">
+      <div class="header">
+        <div class="logo"></div>
+        <div class="search"></div>
+        <div class="nav">
+          <ul class="nav__list">
+            <li class="nav__item"></li>
+            <li class="nav__item"></li>
+            <li class="nav__item"></li>
+            <li class="nav__item"></li>
+            <li class="nav__item"></li>
+          </ul>
+        </div>
+        <div class="buttons__actions">
+          <ul class="buttons__actions__list">
+            <li class="buttons__actions__item"></li>
+            <li class="buttons__actions__item"></li>
+            <li class="buttons__actions__item"></li>
+          </ul>
+        </div>
+        <div class="image__profile">
+          <img src="img/avatar.jpg" alt="#" />
+        </div>
+      </div>
+    </div>
   </body>
 </html>
