--- a/Task 20/assets/index.html
+++ b/Task 20/assets/index.html
@@ -33,8 +33,19 @@
   -->
     <div class="container">
       <div class="header">
-        <div class="logo"></div>
-        <div class="search"></div>
+        <div class="logo">
+          <img class="logo__img" src="img/logo.png" alt="" />
+        </div>
+        <div class="search">
+          <input class="search__input" type="text" placeholder="Search" />
+          <button class="button__search">
+            <img
+              class="search__logo"
+              src="img/search_24dp_5F6368.png"
+              alt="#"
+            />
+          </button>
+        </div>
         <div class="nav">
           <ul class="nav__list">
             <li class="nav__item"></li>
