--- a/Task 20/assets/index.html
+++ b/Task 20/assets/index.html
@@ -32,38 +32,46 @@
     And good luck!
   -->
     <div class="container">
-      <div class="header">
-        <div class="logo">
-          <img class="logo__img" src="img/logo.png" alt="" />
-        </div>
-        <div class="search">
-          <input class="search__input" type="text" placeholder="Search" />
-          <button class="button__search">
-            <img
-              class="search__logo"
-              src="img/search_24dp_5F6368.png"
-              alt="#"
-            />
-          </button>
-        </div>
-        <div class="nav">
-          <ul class="nav__list">
-            <li class="nav__item"></li>
-            <li class="nav__item"></li>
-            <li class="nav__item"></li>
-            <li class="nav__item"></li>
-            <li class="nav__item"></li>
-          </ul>
-        </div>
-        <div class="buttons__actions">
-          <ul class="buttons__actions__list">
-            <li class="buttons__actions__item"></li>
-            <li class="buttons__actions__item"></li>
-            <li class="buttons__actions__item"></li>
-          </ul>
-        </div>
-        <div class="image__profile">
-          <img src="img/avatar.jpg" alt="#" />
+      <div class="header__block">
+        <div class="header">
+          <div class="logo">
+            <img class="logo__img" src="img/logo.png" alt="" />
+          </div>
+          <div class="search">
+            <input class="search__input" type="text" placeholder="Search" />
+            <button class="button__search">
+              <img
+                class="search__logo"
+                src="img/search_24dp_5F6368.png"
+                alt="#"
+              />
+            </button>
+          </div>
+          <div class="nav">
+            <ul class="nav__list">
+              <li class="nav__item">Home</li>
+              <li class="nav__item">Profile</li>
+              <li class="nav__item">Connections</li>
+              <li class="nav__item">Interest</li>
+              <li class="nav__item buy__item">Try Premium</li>
+            </ul>
+          </div>
+          <div class="buttons__actions">
+            <ul class="buttons__actions__list">
+              <li class="buttons__actions__item">
+                <img src="img/comment_24dp_5F6368.svg" alt="#" />
+              </li>
+              <li class="buttons__actions__item">
+                <img src="img/notifications_24dp_5F6368.svg" alt="#" />
+              </li>
+              <li class="buttons__actions__item">
+                <img src="img/person_add_24dp_5F6368.svg" alt="#" />
+              </li>
+            </ul>
+          </div>
+          <div class="image__profile">
+            <img class="avatar" src="img/avatar.jpg" alt="#" />
+          </div>
         </div>
       </div>
     </div>
