Добавил второй хеддер

--- a/Task 20/assets/index.html
+++ b/Task 20/assets/index.html
@@ -74,6 +74,22 @@
           </div>
         </div>
       </div>
+      <div class="header__part__two">
+        <ul class="header__part__two__button__list">
+          <li class="header__part__two__button__item">
+            <button class="button">Posts</button>
+          </li>
+          <li class="header__part__two__button__item">
+            <button class="button">Background</button>
+          </li>
+          <li class="header__part__two__button__item">
+            <button class="button">Recommendations</button>
+          </li>
+          <li class="header__part__two__button__item">
+            <button class="button">Following</button>
+          </li>
+        </ul>
+      </div>
     </div>
   </body>
 </html>
