Начал основной блок контента

--- a/Task 20/assets/index.html
+++ b/Task 20/assets/index.html
@@ -90,6 +90,12 @@
           </li>
         </ul>
       </div>
+
+      <div class="main__content__block">
+        <div class="main__content">
+          <div class="side__profile"></div>
+        </div>
+      </div>
     </div>
   </body>
 </html>
